<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017 Carmen Alvarez
  ~
  ~ This file is part of Poet Assistant.
  ~
  ~ Poet Assistant is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Poet Assistant is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Poet Assistant.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="entryIconClickListener"
            type="ca.rmen.android.poetassistant.wotd.WotdAdapter.EntryIconClickListener" />

        <variable
            name="listItem"
            type="ca.rmen.android.poetassistant.wotd.WotdListItem" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/btn_star_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:button="@drawable/ic_star"
            android:checked="@{listItem.isFavorite}"
            android:clickable="true"
            android:paddingEnd="8dp"
            android:paddingStart="4dp"
            android:focusable="true"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@{listItem.date}"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:text="yesterday" />


            <TextView
                android:id="@+id/text1"
                style="?attr/textAppearanceListItem"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{listItem.text}"
                tools:text="happy" />

        </LinearLayout>

        <!--
             Define AppCompatImageView instead of ImageView
             to avoid lint warnings about the app:srcCompat attribute,
             and to be able to see the image in the design view in
             Android Studio
             http://stackoverflow.com/questions/35624562/code-analysis-error-unexpected-namespace-prefix-after-upgrading-android-suppor
        -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_rhymer"
            android:layout_width="@dimen/list_rtd_icon_size"
            android:layout_height="@dimen/list_rtd_icon_size"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/tab_rhymer"
            android:onClick="@{entryIconClickListener::onRhymerIconClicked}"
            android:paddingEnd="@dimen/list_rtd_icon_padding"
            android:paddingLeft="@dimen/list_rtd_icon_padding"
            android:paddingRight="@dimen/list_rtd_icon_padding"
            android:paddingStart="@dimen/list_rtd_icon_padding"
            android:visibility="@{listItem.showButtons? View.VISIBLE:View.GONE}"
            app:srcCompat="@drawable/ic_rhymer"
            android:focusable="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_thesaurus"
            android:layout_width="@dimen/list_rtd_icon_size"
            android:layout_height="@dimen/list_rtd_icon_size"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/tab_thesaurus"
            android:onClick="@{entryIconClickListener::onThesaurusIconClicked}"
            android:paddingEnd="@dimen/list_rtd_icon_padding"
            android:paddingLeft="@dimen/list_rtd_icon_padding"
            android:paddingRight="@dimen/list_rtd_icon_padding"
            android:paddingStart="@dimen/list_rtd_icon_padding"
            android:visibility="@{listItem.showButtons? View.VISIBLE:View.GONE}"
            app:srcCompat="@drawable/ic_thesaurus" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_dictionary"
            android:layout_width="@dimen/list_rtd_icon_size"
            android:layout_height="@dimen/list_rtd_icon_size"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/tab_dictionary"
            android:onClick="@{entryIconClickListener::onDictionaryIconClicked}"
            android:paddingEnd="@dimen/list_rtd_icon_padding"
            android:paddingLeft="@dimen/list_rtd_icon_padding"
            android:paddingRight="@dimen/list_rtd_icon_padding"
            android:paddingStart="@dimen/list_rtd_icon_padding"
            android:visibility="@{listItem.showButtons? View.VISIBLE:View.GONE}"
            app:srcCompat="@drawable/ic_dictionary" />

    </LinearLayout>
</layout>
