...
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_random_word">Random word</string>
    <string name="action_clear_search_history">Clear search history</string>
    <string name="confirm_clear_search_history">Clear the search history?</string>
    <string name="action_wotd_history">Words of the day</string>
    <string name="action_clear_favorites">Clear all favorite words?</string>
    <string name="content_description_toggle_favorite">Toggle favorite</string>
    <string name="search_history_cleared">Search history cleared</string>
    <string name="favorites_cleared">Favorites cleared</string>
    <string name="action_export_favorites">Export favorites</string>
    <string name="action_import_favorites">Import favorites</string>
    <string name="import_favorites_success">Favorites imported from %s</string>
    <string name="import_favorites_error">Could not import favorites file from %s</string>
    <string name="export_favorites_success">Favorites exported to %s</string>
    <string name="export_favorites_error">Could not export favorites file to %s</string>
    <string name="export_favorites_default_filename">poet-assistant-favorites.txt</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="search_hint">Lookup a word</string>
    <string name="favorites_list_header">Favorites</string>
    <string name="wotd_list_header">Words of the day</string>
    <string name="rhyme_section_stress_syllables">Strict rhyme matches:</string>
    <string name="rhyme_section_favorites">Favorites:</string>
...
    <string name="filter_thesaurus_message">Only show words which rhyme with this word:</string>
    <string name="filter_thesaurus_label">"Rhymes of: "</string>
    <string name="filter_clear">Clear filter</string>
    <string name="menu_lookup_rhymer">Rhymer</string>
    <string name="menu_lookup_thesaurus">Thesaurus</string>
    <string name="menu_lookup_dictionary">Dictionary</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_more">More</string>
    <string name="snackbar_copied_text">Copied text to clipboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wotd_setting_title">Word of the day</string>
    <string name="wotd_setting_description">Display a notification once a day with a random word.</string>
    <string name="wotd_notification_title">Word of the day: %s</string>
    <string name="wotd_notification_definition"><![CDATA[<br>\n<b>%1$s.</b> %2$s]]></string>
    <string name="wotd_setting_system_notification_priority_label_max">Max</string>
    <string name="wotd_setting_system_notification_priority_label_high">High</string>
    <string name="wotd_setting_system_notification_priority_label_default">Default</string>
...
    <string name="pref_category_ui">Interface</string>
    <string name="pref_voice_default">System voice</string>
    <string name="pref_voice_title">Voice</string>
    <string name="pref_voice_summary">%s</string>
    <string name="pref_voice_speed_title">Voice speed (%)</string>
    <string name="pref_voice_pitch_title">Voice pitch (%)</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">%s</string>
    <string name="pref_theme_value_light">Light</string>
    <string name="pref_theme_value_dark">Dark</string>
    <string name="pref_theme_value_auto">Auto</string>
    <string-array name="pref_theme_titles">
        <item>@string/pref_theme_value_light</item>
        <item>@string/pref_theme_value_dark</item>
        <item>@string/pref_theme_value_auto</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>
    <string name="pref_layout_title">Layout</string>
    <string name="pref_layout_summary">%s</string>
    <string name="pref_layout_value_clean">Clean</string>
    <string name="pref_layout_value_efficient">Efficient</string>
    <string-array name="pref_layout_titles">
        <item>@string/pref_layout_value_clean</item>
        <item>@string/pref_layout_value_efficient</item>
    </string-array>
    <string-array name="pref_layout_values">
...
